--- a/_includes/syllabus.html
+++ b/_includes/syllabus.html
@@ -76,5 +76,8 @@
   <p>
     The actual schedule may vary slightly depending on the topics and exercises chosen by the instructor.
   </p>
-
+  <p>
+    This lesson was funded by NIH grant R25GM123516 (Churchill) and The Jackson Laboratory Director's Innovation Fund 
+	  (McClatchy & Churchill).
+  </p>
 </div>
